beta_v2/cloud-native-k8s/k8s-node/src/oke/ingress-app.yaml
# Use 2 Ingress since the parameter replacement work differently in NGINX for / and /app (see annotation)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-node-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2    
spec:
  rules:
    - http:
        paths:
          - path: /k8s-node/app(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: k8s-node-app-service
                port:
                  number: 80
